<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/postLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/common_pudding">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:contentDescription="@string/description_post_author_avatar"
        app:layout_constraintBottom_toTopOf="@id/barrierAvatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="4dp"
        app:srcCompat="@drawable/post_avatar_drawable" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_pudding"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/published"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_pudding"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author"
        tools:text="@sample/posts.json/data/published" />

    <Button
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_more"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/author"
        app:layout_constraintTop_toTopOf="parent"
        app:icon ="@drawable/ic_baseline_more_vert_24"
        style="@style/Widget.App.Button.OutlinedButton.IconOnly"
        />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="published,avatar,author, menu" />


    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_pudding"
        android:autoLink="all"
        app:layout_constraintTop_toBottomOf="@id/barrierAvatar"
        tools:text="@sample/posts.json/data/content" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="content" />
    <ImageView
        android:id="@+id/image_holder"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        app:layout_constraintTop_toBottomOf="@id/barrierContent"
        app:layout_constraintBottom_toTopOf="@id/barrierVideo"
        android:visibility="gone"
        android:contentDescription="@string/description_post_author_avatar" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/video_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="video_content, play, video_holder" />

    <VideoView
        android:id="@+id/video_content"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        app:layout_constraintTop_toBottomOf="@id/barrierContent"
        app:layout_constraintBottom_toTopOf="@id/barrierVideo"
        />

    <ImageView
        android:id="@+id/video_holder"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@id/barrierContent"
        app:layout_constraintBottom_toTopOf="@id/barrierVideo"
        android:contentDescription="@string/description_post_author_avatar" />
    <!--        android:background="@drawable/video_holder"-->

    <Button
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="@id/video_content"
        app:layout_constraintBottom_toBottomOf="@id/video_content"
        app:layout_constraintStart_toStartOf="@id/video_content"
        app:layout_constraintEnd_toEndOf="@id/video_content"
        android:contentDescription="@string/description_play"
        app:icon ="@drawable/ic_play_48dp"
        style="@style/Widget.App.Button.OutlinedButton.IconOnly"
        />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="video_content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLike"
        style="@style/Widget.AppTheme.LikeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_pudding"
        android:minHeight="0dp"
        android:insetBottom="0dp"
        android:insetTop="0dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:checkable="true"
        android:contentDescription="@string/description_liked_count"
        app:icon="@drawable/ic_like_selector"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierVideo"
        tools:text="@sample/posts.json/data/likedCount"
     />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnShare"
        style="@style/Widget.AppTheme.LikeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_pudding"
        android:minHeight="0dp"
        android:insetBottom="0dp"
        android:insetTop="0dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:contentDescription="@string/description_shared"
        app:icon="@drawable/ic_share_24"
        app:layout_constraintStart_toEndOf="@id/btnLike"
        app:layout_constraintTop_toBottomOf="@id/barrierVideo"
        tools:text="@sample/posts.json/data/sharedCount" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnViews"
        style="@style/Widget.AppTheme.LikeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_pudding"
        android:minHeight="0dp"
        android:insetBottom="0dp"
        android:insetTop="0dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:contentDescription="@string/description_viewed"
        app:icon="@drawable/ic_viewed_eye_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierVideo"
        tools:text="@sample/posts.json/data/viewCount" />

</androidx.constraintlayout.widget.ConstraintLayout>